--- a/pages/quotedPriceDetail/quotedPriceDetail.scss
+++ b/pages/quotedPriceDetail/quotedPriceDetail.scss
@@ -9,6 +9,12 @@
     margin-left: 10px;
   }
 
+	.noTopRightLeft{
+		border-top: 0px;
+		border-left: 0px;
+		border-right: 0px;
+	}
+	
   .card > view {
     margin-top: 10px;
   }
