--- a/pages/billingManagement/productionPlan/productionPlan.wxml
+++ b/pages/billingManagement/productionPlan/productionPlan.wxml
@@ -1,81 +1,33 @@
-<!--pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrder.wxml-->
-<view id="rawMaterialPurchaseOrder">
+<!--pages/billingManagement/productionPlan/productionPlan.wxml-->
+<view id="productionPlan">
 	<nav-content>
 		<view slot="after">
-			<view>原料订购单</view>
+			<view>生产计划单</view>
 		</view>
 	</nav-content>
 
 	<view class="flex bgColorWhite">
-		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="订购单号/订单号" hide-label="{{true}}" />
+		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
 		<van-icon class="w10" name="more-o" bindtap="openPopup" />
 	</view>
 
-	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
-		<view style="content: ''; overflow: hidden;"></view>
-		<view wx:for="{{list}}" class="card flex">
-			<view class="w100 flex aic">
-				<view class="title w32">订购单号：</view>
-				<view>{{item.code}}</view>
-				<view class="ml20 colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px;"
-					wx:if="{{item.is_check === 0}}">待审核</view>
-				<view class="ml20 colorWhite bgColor27A2 pl10 pr10 pt5 pb5" style="border-radius: 500px;"
-					wx:elif="{{item.is_check === 1}}">已审核</view>
-				<view class="ml20 colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px;"
-					wx:elif="{{item.is_check === 2}}">已驳回</view>
-				<view class="ml15 colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px;" wx:else>单据异常</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="title w32">关联订单号：</view>
-				<view wx:if="{{item.order_type === 1}}" class="flex aic">
-					<view class="colorWhite bgColorOrange tc mr10 fz28"
-						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">订</view>
-					{{item.order_code || '无'}}
-				</view>
-				<view wx:if="{{item.order_type === 2}}" class="flex aic">
-					<view class="colorWhite bgColor27A2 tc mr10 fz28"
-						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">样</view>
-					{{item.order_code || '无'}}
-				</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="title w32">创建人：</view>
-				<view>{{item.user_name}}</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="title w32">订购单位：</view>
-				<view>{{item.client_name}}</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">订购数量：</view>
-					<view>{{item.total_number}}</view>
-				</view>
-				<view class="title">订购金额：</view>
-				<view>{{item.total_price}}</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">入库数量：</view>
-					<view>{{item.total_push_number}}</view>
-				</view>
-				<view class="w50 flex">
-					<view class="title">入库金额：</view>
-					<view>{{item.total_push_price}}</view>
-				</view>
-			</view>
-			<view wx:if="{{item.others_fee_data.length > 0 && item.others_fee_data[0].price}}" class="w100 flex aic mt10">
-				<view class="title w32">额外费用：</view>
-				<view class="color27A2">点击查看</view>
-			</view>
-		</view>
-		<view wx:if="{{noData}}" class="vh60"></view>
-		<l-loadmore show="{{showLoading}}" line="{{true}}" loading-text="努力加载中~"></l-loadmore>
-		<l-loadmore show="{{isEnd && orderList.length !== 0}}" type="end" line="{{true}}" end-text="我也是有底线的"></l-loadmore>
-		<view class="vh5"></view>
-	</scroll-view>
-
 	<l-message content="{{content}}" />
+	<van-popup show="{{ showPopupProcess }}" bind:close="closePopupProcess" bind:click-overlay="closePopupProcess" position="right">
+		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
+			<view class="vh12"></view>
+			<scroll-view>
+				<view class="mt20" wx:for="{{processList}}">
+					<view class="mb20 bold">{{item.text}}</view>
+					<view class="flex flexWarp">
+						<van-button class="ml10 mt10" wx:for="{{item.children}}" wx:for-item="itemSon" bind:click="checkProcess" data-item="{{itemSon}}">
+							{{itemSon.text}}
+						</van-button>
+					</view>
+				</view>
+				<view class="vh8"></view>
+			</scroll-view>
+		</view>
+	</van-popup>
 	<van-popup show="{{ showPopupSon }}" bind:close="closePopupSon" bind:click-overlay="closePopupSon" position="right">
 		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
 			<view class="vh12"></view>
@@ -102,7 +54,9 @@
 		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
 			<view class="vh12"></view>
 			<scroll-view>
-				<van-cell title="订购公司" is-link border="{{false}}" bind:click="openPopupSon" value="{{client_name || '请选择'}}" />
+				<van-cell title="生产单位" is-link border="{{false}}" bind:click="openPopupSon" value="{{client_name || '请选择'}}" />
+				<view class="line"></view>
+				<van-cell title="工序筛选" is-link border="{{false}}" bind:click="openPopupProcess" value="{{process_name || '请选择'}}" />
 				<view class="line"></view>
 				<view>创建人：</view>
 				<view class="flex">
@@ -174,3 +128,5 @@
 		</view>
 	</van-popup>
 </view>
+
+
