--- a/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.wxml
+++ b/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.wxml
@@ -21,8 +21,9 @@
 					<van-collapse value="{{ activeName }}" bind:change="changeCollapse">
 						<van-collapse-item wx:for="{{item.children}}" wx:for-item="secondClient" title="{{secondClient.text}}"
 							name="{{secondClient.id}}">
-							<view wx:for="{{secondClient.children}}" wx:for-item="thirdClient">
-								<van-button bind:click="checkClient" data-item="{{thirdClient}}">
+							<view class="flex flexWarp">
+								<van-button class="ml10 mt10" wx:for="{{secondClient.children}}" wx:for-item="thirdClient"
+									bind:click="checkClient" data-item="{{thirdClient}}">
 									{{thirdClient.text}}
 								</van-button>
 							</view>
