--- a/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrder.wxml
+++ b/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrder.wxml
@@ -85,8 +85,8 @@
 					<van-collapse value="{{ activeName }}" bind:change="changeCollapse">
 						<van-collapse-item wx:for="{{item.children}}" wx:for-item="secondClient" title="{{secondClient.text}}"
 							name="{{secondClient.id}}">
-							<view wx:for="{{secondClient.children}}" wx:for-item="thirdClient">
-								<van-button bind:click="checkClient" data-item="{{thirdClient}}">
+							<view class="flex flexWarp">
+								<van-button class="mt10 ml10" wx:for="{{secondClient.children}}" wx:for-item="thirdClient" bind:click="checkClient" data-item="{{thirdClient}}">
 									{{thirdClient.text}}
 								</van-button>
 							</view>
