单据管理-原料补充单-详情

--- a/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplementDetail.scss
+++ b/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplementDetail.scss
@@ -1,6 +1,6 @@
-/* pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.wxss */
-#rawMaterialPlanDetail {
-  .ui-radio-index--icon-select {
+/* pages/billingManagement/rawMaterialSupplement/rawMaterialSupplementDetail.wxss */
+#rawMaterialSupplementDetail{
+	.ui-radio-index--icon-select {
     color: #27a2fd;
 	}
 	
