--- a/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml
+++ b/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml
@@ -1,8 +1,8 @@
-<!--pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.wxml-->
-<view id="rawMaterialPlanDetail">
+<!--pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml-->
+<view id="rawMaterialPurchaseOrderDetail">
 	<nav-content>
 		<view slot="after">
-			<view>原料计划单详情</view>
+			<view>原料订购单详情</view>
 		</view>
 	</nav-content>
 
@@ -10,7 +10,7 @@
 	<view class="card fz28 por">
 		<view class="title">基础信息</view>
 		<view class="flex mt10">
-			<view class="w30 color6">系统计划单</view>
+			<view class="w30 color6">订购单</view>
 			<view class="w70">{{info.code}}</view>
 		</view>
 		<view class="flex mt10">
@@ -27,21 +27,51 @@
 			</view>
 		</view>
 		<view class="flex mt10">
-			<view class="w30 color6">下单客户</view>
+			<view class="w30 color6">联系人</view>
 			<view class="w70">
-				{{info.client_name}}
+				{{info.contacts_name}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">联系电话</view>
+			<view class="w70">
+				{{info.contacts_phone}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">计划单</view>
+			<view class="w70">
+				{{info.plan_code}}
 			</view>
 		</view>
 		<view class="flex mt10">
 			<view class="w30 color6">下单日期</view>
 			<view class="w70">
-				{{info.order_time}}
+				{{info.created_at}}
 			</view>
 		</view>
 		<view class="flex mt10">
-			<view class="w30 color6">负责人/小组</view>
+			<view class="w30 color6">交货日期</view>
 			<view class="w70">
-				{{info.group_name}}
+				{{info.delivery_time}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">采购单位</view>
+			<view class="w70">
+				{{info.client_name}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">订购总数</view>
+			<view class="w70">
+				{{info.total_number}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">订购总额</view>
+			<view class="w70">
+				{{info.total_price}}
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
@@ -49,41 +79,10 @@
 		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
 	</view>
 
-	<!-- 产品信息 -->
-	<view class="card fz28">
-		<view class="title">产品信息</view>
-		<view wx:for="{{info.production_plan_data}}">
-			<view class="flex mt10">
-				<view class="w30 color6">产品名</view>
-				<view class="w70 color27A2">
-					{{ item.product_code || item.system_code }}（{{ item.category }}/{{ item.secondary_category }}）
-				</view>
-			</view>
-			<view wx:for="{{item.product_data}}" wx:for-item="itemColor">
-				<view class="flex mt10">
-					<view class="w30 color6">尺码颜色</view>
-					<view class="w70">{{ itemColor.size_name }}/{{ itemColor.color_name }}</view>
-				</view>
-				<view wx:for="{{itemColor.info_data}}" wx:for-item="itemPart">
-					<view class="flex mt10">
-						<view class="w50 flex">
-							<view class="w60 color6">产品部位</view>
-							<view class="w40">{{ itemPart.part_name }}</view>
-						</view>
-						<view class="w50 flex">
-							<view class="w60 color6">计划生产</view>
-							<view class="w40">{{ itemPart.number }}</view>
-						</view>
-					</view>
-				</view>
-			</view>
-		</view>
-	</view>
-
 	<!-- 原料信息 -->
 	<view class="card fz28">
 		<view class="title">原料信息</view>
-		<view wx:for="{{materialPlanInfo}}">
+		<view wx:for="{{materialInfo}}">
 			<view class="flex mt10">
 				<view class="w30 color6">原料名称</view>
 				<view class="w70 color27A2">
@@ -91,9 +90,17 @@
 				</view>
 			</view>
 			<view class="flex mt10">
-				<view class="w30 color6">合计值</view>
-				<view class="w70">
-					{{ item.total_price }}{{ item.childrenMergeInfo[0].unit }}
+				<view class="flex w50">
+					<view class="w60 color6">合计值</view>
+					<view class="w40">
+						{{ item.total_number }}{{ item.childrenMergeInfo[0].unit }}
+					</view>
+				</view>
+				<view class="flex w50">
+					<view class="w60 color6">合计金额</view>
+					<view class="w40">
+						{{ item.total_price }}元
+					</view>
 				</view>
 			</view>
 			<view wx:for="{{item.childrenMergeInfo}}" wx:for-item="itemChild">
@@ -104,7 +111,13 @@
 					</view>
 					<view class="w50 flex">
 						<view class="w60 color6">数量</view>
-						<view class="w40">{{ itemChild.final_number }}{{ itemChild.unit }}</view>
+						<view class="w40">{{ itemChild.number }}{{ itemChild.unit }}</view>
+					</view>
+				</view>
+				<view class="flex mt10">
+					<view class="w30 color6">单价</view>
+					<view class="w70">
+						{{ itemChild.price }}元
 					</view>
 				</view>
 				<!-- <view class="flex mt10">
@@ -120,7 +133,7 @@
 	<view class="card fz28">
 		<view class="title">其它信息</view>
 		<view class="flex mt10">
-			<view class="w30 color6">原料名称</view>
+			<view class="w30 color6">备注信息</view>
 			<view class="w70">
 				{{ info.desc || '无'}}
 			</view>
@@ -135,7 +148,7 @@
 
 	<view class="mt20 submit" style="position: fixed;bottom:5%;left:50%;transform: translateX(-50%);">
 		<view class="flex jcsa">
-			<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="openCheck">审核计划单</van-button>
+			<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="openCheck">审核订购单</van-button>
 		</view>
 	</view>
 
