--- a/pages/billingManagement/deductionForm/deductionForm.scss
+++ b/pages/billingManagement/deductionForm/deductionForm.scss
@@ -82,5 +82,9 @@
     background: transparent;
     border-radius: 10rpx;
     content: "";
-  }
+	}
+	
+	.van-popup{
+		background-color: transparent;
+	}
 }
