--- a/pages/billingManagement/deductionForm/deductionForm.wxml
+++ b/pages/billingManagement/deductionForm/deductionForm.wxml
@@ -21,6 +21,51 @@
 		</view>
 	</view>
 
+	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
+		<view style="content: ''; overflow: hidden;"></view>
+		<view wx:for="{{list}}" class="card flex">
+			<view class="w100 flex aic">
+				<view class="title w32">票据编号：</view>
+				<view>{{item.code}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">关联订单号：</view>
+				<view class="flex aic">
+					<view wx:if="{{item.order_type === 1}}" class="colorWhite bgColorOrange tc mr10 fz28"
+						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">订</view>
+					<view wx:if="{{item.order_type === 2}}" class="colorWhite bgColor27A2 tc mr10 fz28"
+						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">样</view>
+					{{item.order_code || '无'}}
+				</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">创建人：</view>
+				<view>{{item.user_name}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">关联单位：</view>
+				<view>{{item.client_name}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">扣款金额：</view>
+				<view>{{item.price}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">扣款原因：</view>
+				<view>{{item.reason}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">相关图片：</view>
+				<view wx:if="{{item.file_url}}" bindtap="showImg" data-item="{{item}}" class="color27A2">点击查看</view>
+				<view wx:else class="color6">无</view>
+			</view>
+		</view>
+		<view wx:if="{{noData}}" class="vh60"></view>
+		<l-loadmore show="{{showLoading}}" line="{{true}}" loading-text="努力加载中~"></l-loadmore>
+		<l-loadmore show="{{isEnd && orderList.length !== 0}}" type="end" line="{{true}}" end-text="我也是有底线的"></l-loadmore>
+		<view class="vh5"></view>
+	</scroll-view>
+
 	<!-- 下拉 -->
 	<picker values="{{dateList}}" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="date"
 		showDialog="{{showDate}}"></picker>
@@ -30,4 +75,8 @@
 		showDialog="{{showGroup}}"></picker>
 	<picker values="{{userList}}" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="user"
 		showDialog="{{showUser}}"></picker>
+
+	<van-popup show="{{ showPopup }}" catchtap="closePopup">
+		<van-image width="99vw" height="99vh" fit="contain" src="{{img_url}}" />
+	</van-popup>
 </view>
