--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
@@ -27,13 +27,10 @@
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">关联订单号：</view>
-				<view wx:if="{{item.order_type === 1}}" class="flex aic">
-					<view class="colorWhite bgColorOrange tc mr10 fz28"
+				<view class="flex aic">
+					<view wx:if="{{item.order_type === 1}}" class="colorWhite bgColorOrange tc mr10 fz28"
 						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">订</view>
-					{{item.order_code || '无'}}
-				</view>
-				<view wx:if="{{item.order_type === 2}}" class="flex aic">
-					<view class="colorWhite bgColor27A2 tc mr10 fz28"
+					<view wx:if="{{item.order_type === 2}}" class="colorWhite bgColor27A2 tc mr10 fz28"
 						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">样</view>
 					{{item.order_code || '无'}}
 				</view>
@@ -43,25 +40,19 @@
 				<view>{{item.user_name}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
+				<view class="title w32">采购状态：</view>
+				<view wx:if="{{item.material_order_progress > 0 && item.material_order_progress < 100}}" class="color03d0">进行中
+				</view>
+				<view wx:if="{{item.material_order_progress === 0}}" class="colorOrange">未进行</view>
+				<view wx:if="{{item.material_order_progress >= 100}}" class="color27A2">已完成</view>
+			</view>
+			<view class="w100 flex aic mt10">
 				<view class="w50 flex">
 					<view class="title w65">计划生产数：</view>
 					<view>{{item.total_production_number}}</view>
 				</view>
 				<view class="title">计划原料数：</view>
 				<view>{{item.total_plan_number}}</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">平均损耗：</view>
-					<view>{{item.pre_loss}}%</view>
-				</view>
-				<view class="w50 flex">
-					<view class="title">采购状态：</view>
-					<view wx:if="{{item.material_order_progress > 0 && item.material_order_progress < 100}}" class="color03d0">进行中
-					</view>
-					<view wx:if="{{item.material_order_progress === 0}}" class="colorOrange">未进行</view>
-					<view wx:if="{{item.material_order_progress >= 100}}" class="color27A2">已完成</view>
-				</view>
 			</view>
 		</view>
 		<view wx:if="{{noData}}" class="vh60"></view>
