--- a/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.wxml
+++ b/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.wxml
@@ -15,7 +15,7 @@
 		<view style="content: ''; overflow: hidden;"></view>
 		<view wx:for="{{list}}" class="card flex">
 			<view class="w100 flex aic">
-				<view class="title w32">调取单号：</view>
+				<view class="title w32">加工单号：</view>
 				<view>{{item.code}}</view>
 				<view class="ml30 colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px;"
 					wx:if="{{item.is_check === 0}}">待审核</view>
@@ -27,13 +27,10 @@
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">关联订单号：</view>
-				<view wx:if="{{item.order_type === 1}}" class="flex aic">
-					<view class="colorWhite bgColorOrange tc mr10 fz28"
+				<view class="flex aic">
+					<view wx:if="{{item.order_type === 1}}" class="colorWhite bgColorOrange tc mr10 fz28"
 						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">订</view>
-					{{item.order_code || '无'}}
-				</view>
-				<view wx:if="{{item.order_type === 2}}" class="flex aic">
-					<view class="colorWhite bgColor27A2 tc mr10 fz28"
+					<view wx:if="{{item.order_type === 2}}" class="colorWhite bgColor27A2 tc mr10 fz28"
 						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">样</view>
 					{{item.order_code || '无'}}
 				</view>
@@ -43,28 +40,12 @@
 				<view>{{item.user_name}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
-				<view class="title w32">调取仓库：</view>
-				<view>{{item.store}}</view>
+				<view class="title w32">加工单位：</view>
+				<view>{{item.client_name}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">调取数量：</view>
-					<view>{{item.total_number}}</view>
-				</view>
-				<view class="w50 flex">
-					<view class="title w65">调取金额：</view>
-					<view>{{item.total_price}}</view>
-				</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">入库数量：</view>
-					<view>{{item.total_push_number}}</view>
-				</view>
-				<view class="w50 flex">
-					<view class="title w65">入库金额：</view>
-					<view>{{item.total_push_price}}</view>
-				</view>
+				<view class="title w32">加工数量：</view>
+				<view>{{item.total_price}}</view>
 			</view>
 		</view>
 		<view wx:if="{{noData}}" class="vh60"></view>
