--- a/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrder.wxml
+++ b/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrder.wxml
@@ -27,13 +27,10 @@
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">关联订单号：</view>
-				<view wx:if="{{item.order_type === 1}}" class="flex aic">
-					<view class="colorWhite bgColorOrange tc mr10 fz28"
+				<view class="flex aic">
+					<view wx:if="{{item.order_type === 1}}" class="colorWhite bgColorOrange tc mr10 fz28"
 						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">订</view>
-					{{item.order_code || '无'}}
-				</view>
-				<view wx:if="{{item.order_type === 2}}" class="flex aic">
-					<view class="colorWhite bgColor27A2 tc mr10 fz28"
+					<view wx:if="{{item.order_type === 2}}" class="colorWhite bgColor27A2 tc mr10 fz28"
 						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">样</view>
 					{{item.order_code || '无'}}
 				</view>
@@ -51,22 +48,10 @@
 					<view class="title w65">订购数量：</view>
 					<view>{{item.total_number}}</view>
 				</view>
-				<view class="title">订购金额：</view>
-				<view>{{item.total_price}}</view>
-			</view>
-			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">入库数量：</view>
-					<view>{{item.total_push_number}}</view>
+				<view class="w50 flex pl20">
+					<view class="title">订购金额：</view>
+					<view>{{item.total_price}}</view>
 				</view>
-				<view class="w50 flex">
-					<view class="title">入库金额：</view>
-					<view>{{item.total_push_price}}</view>
-				</view>
-			</view>
-			<view wx:if="{{item.others_fee_data.length > 0 && item.others_fee_data[0].price}}" class="w100 flex aic mt10">
-				<view class="title w32">额外费用：</view>
-				<view class="color27A2">点击查看</view>
 			</view>
 		</view>
 		<view wx:if="{{noData}}" class="vh60"></view>
