--- a/pages/billingManagement/workshopSettlementLog/workshopSettlementLog.wxml
+++ b/pages/billingManagement/workshopSettlementLog/workshopSettlementLog.wxml
@@ -11,6 +11,55 @@
 		<van-icon class="w10" name="more-o" bindtap="openPopup" />
 	</view>
 
+	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
+		<view style="content: ''; overflow: hidden;"></view>
+		<view wx:for="{{list}}" class="card flex">
+			<view class="w100 flex aic">
+				<view class="title w32">序号：</view>
+				<view>{{item.id}}</view>
+				<view class="colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px; position: absolute;right: 5%;top: 5%;"
+					wx:if="{{item.is_check === 0}}">待审核</view>
+				<view class="colorWhite bgColor27A2 pl10 pr10 pt5 pb5" style="border-radius: 500px; position: absolute;right: 5%;top: 5%;"
+					wx:elif="{{item.is_check === 1}}">已审核</view>
+				<view class="colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px; position: absolute;right: 5%;top: 5%;"
+					wx:elif="{{item.is_check === 2}}">已驳回</view>
+				<view class="colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px; position: absolute;right: 5%;top: 5%;" wx:else>单据异常</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">关联订单号：</view>
+				<view class="flex aic">
+					<view wx:if="{{item.order_type === 1}}" class="colorWhite bgColorOrange tc mr10 fz28"
+						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">订</view>
+					<view wx:if="{{item.order_type === 2}}" class="colorWhite bgColor27A2 tc mr10 fz28"
+						style="width: 25px;height: 25px;line-height: 25px;border-radius: 500px;">样</view>
+					{{item.order_code || '无'}}
+				</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">创建人：</view>
+				<view>{{item.user_name}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">员工姓名：</view>
+				<view>{{item.staff_name}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="w50 flex">
+					<view class="title w65">完成数量：</view>
+					<view>{{item.number}}</view>
+				</view>
+				<view class="w50 flex ml10">
+					<view class="title w55">结算金额：</view>
+					<view>{{item.total_price}}</view>
+				</view>
+			</view>
+		</view>
+		<view wx:if="{{noData}}" class="vh60"></view>
+		<l-loadmore show="{{showLoading}}" line="{{true}}" loading-text="努力加载中~"></l-loadmore>
+		<l-loadmore show="{{isEnd && orderList.length !== 0}}" type="end" line="{{true}}" end-text="我也是有底线的"></l-loadmore>
+		<view class="vh5"></view>
+	</scroll-view>
+
 	<l-message content="{{content}}" />
 	<van-popup show="{{ showPopup }}" bind:close="closePopup" bind:click-overlay="closePopup" position="right">
 		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
