--- a/app.wxss
+++ b/app.wxss
@@ -756,6 +756,30 @@ page {
 	width: 40%;
 }
 
+.w39 {
+	width: 39%;
+}
+
+.w38 {
+	width: 38%;
+}
+
+.w37 {
+	width: 37%;
+}
+
+.w36 {
+	width: 36%;
+}
+
+.w35 {
+	width: 35%;
+}
+
+.w34 {
+	width: 34%;
+}
+
 .w33 {
 	width: 33%;
 }
