--- a/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
+++ b/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
@@ -14,7 +14,7 @@
 
 	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
 		<view style="content: ''; overflow: hidden;"></view>
-		<view wx:for="{{list}}" class="card flex">
+		<view wx:for="{{list}}" class="card flex" bindtap="toDetail" data-item="{{item}}">
 			<view class="w100 flex aic">
 				<view class="title w32">单据编号：</view>
 				<view>{{item.doc_code}}</view>
