--- a/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml
+++ b/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml
@@ -76,7 +76,8 @@
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
 			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
-		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
+		<van-image wx:else style="position: absolute;right:2%;top:2%" width="90" height="90"
+			src="{{statusImageList[info.is_check]}}" />
 	</view>
 
 	<!-- 原料信息 -->
